ipc/ipdl/test/ipdl/error/shmem.ipdl
using class mozilla::ipc::Shmem from "mozilla/ipc/Shmem.h";      // redeclaration

protocol shmem {
child: async Msg(Shmem s);
};
